# python-data-validation-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINKEDIN_POST.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CASE_STUDY_EN.md  ROADMAP.md  case_study_stage34_example.txt
examples/: README.md  generate_sample_data.py
examples/rules/: anonymize.json
examples/sample_data/TableTypeA/: session_01.txt  session_02.txt
examples/sample_data/TableTypeA_old/: session_03.txt  session_04.txt
examples/sample_data/TableTypeB/: session_01.txt  session_02.txt  session_03.txt  session_05.txt
samples/: README.md  audit_report_sample.csv  sample_input.txt
src/: reduce_proportional.py  verify_report.py
src/recpipe/: __init__.py  audit.py  cli.py  records.py  reduce.py  report.py  transform.py  validate.py
tests/: conftest.py  test_audit.py  test_cli.py  test_records.py  test_reduce.py  test_transform.py  test_validate.py
