[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recpipe"
version = "0.1.0"
description = "Audit, reduce, transform and validate large record-based text datasets — safely, with verification at every step."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Árpád Demeter", email = "davisoven@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "data-engineering",
    "data-validation",
    "text-processing",
    "sampling",
    "etl",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Filters",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/arpadd23/python-data-validation-pipeline"
Issues = "https://github.com/arpadd23/python-data-validation-pipeline/issues"
Changelog = "https://github.com/arpadd23/python-data-validation-pipeline/blob/main/CHANGELOG.md"

[project.scripts]
recpipe = "recpipe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
